--- a/code/R-notebook/r-11.ipynb
+++ b/code/R-notebook/r-11.ipynb
@@ -1,7 +1,7 @@
 {
   "cells": [
     {
-      "id": "8b1b362c",
+      "id": "da445c5b",
       "cell_type": "markdown",
       "source": "[\u8fbb\u771f\u543e\u30fb\u77e2\u5439\u592a\u6717\u300e\u30bc\u30ed\u304b\u3089\u306f\u3058\u3081\u308b\u30c7\u30fc\u30bf\u30b5\u30a4\u30a8\u30f3\u30b9\u5165\u9580\u300f\uff08\u8b1b\u8ac7\u793e,\u00a02021\uff09](https://github.com/taroyabuki/fromzero)",
       "metadata": {}
@@ -20,10 +20,10 @@
         "  install.packages(setdiff(packages_to_install, installed_packages))\n",
         "}"
       ],
-      "id": "a358fc7b-6ec9-4536-b2b3-e118b07fe008"
+      "id": "3c085e15-756b-4037-99a6-f7033fc4bcb1"
     },
     {
-      "id": "e7fae3bc",
+      "id": "f6225eee",
       "cell_type": "markdown",
       "source": "## 11.1 Keras\u306b\u3088\u308b\u56de\u5e30",
       "metadata": {}
@@ -44,7 +44,7 @@
         "                \"/fromzero/master/data/wine.csv\")\n",
         "tmp <- read_csv(my_url)"
       ],
-      "id": "8dde8a10-1ec9-4530-ac93-65897e34f291"
+      "id": "157a4b0a-2936-46f4-a1db-abe6b166c9fa"
     },
     {
       "cell_type": "code",
@@ -54,7 +54,7 @@
       "source": [
         "my_data <- tmp[sample(nrow(tmp)), ]"
       ],
-      "id": "2a4c223e-29f8-4b57-852d-8ae25b466e98"
+      "id": "894fb31e-944a-41b4-9a99-fd65d0008e3d"
     },
     {
       "cell_type": "code",
@@ -66,7 +66,7 @@
         "  select(-LPRICE2) %>% scale\n",
         "y <- my_data$LPRICE2"
       ],
-      "id": "eddb588f-bedd-4103-9171-f64821f72144"
+      "id": "829429fa-c46e-4f26-b682-44207ea1988b"
     },
     {
       "cell_type": "code",
@@ -76,7 +76,7 @@
       "source": [
         "curve(activation_relu(x), -3, 3)"
       ],
-      "id": "735bdb7b-a494-4650-8edc-bc0746773c5d"
+      "id": "ff60523f-d831-4cbc-8f9e-3b25280f4e77"
     },
     {
       "cell_type": "code",
@@ -91,7 +91,7 @@
         "summary(my_model) # \u30cd\u30c3\u30c8\u30ef\u30fc\u30af\u306e\u6982\u8981\n",
         "# \u5272\u611b\uff08Python\u306e\u7d50\u679c\u3092\u53c2\u7167\uff09"
       ],
-      "id": "48cf1447-7f43-4fc6-8a85-8d6ede08c75e"
+      "id": "a2f63dc7-16f5-473e-a278-e2baebc5aefa"
     },
     {
       "cell_type": "code",
@@ -103,7 +103,7 @@
         "  loss = \"mse\",\n",
         "  optimizer = \"rmsprop\")"
       ],
-      "id": "be4027db-a89a-47db-ac15-465cf661cc22"
+      "id": "d3f35d56-4881-49d0-a09a-3478864391d9"
     },
     {
       "cell_type": "code",
@@ -115,7 +115,7 @@
         "  patience = 20,\n",
         "  restore_best_weights = TRUE)"
       ],
-      "id": "bb8e6ccb-2d7b-4b7f-aa42-0c4ba260f36c"
+      "id": "73e8a12a-3dea-4e50-81cb-883cbdfe399d"
     },
     {
       "cell_type": "code",
@@ -132,7 +132,7 @@
         "    callbacks = list(my_cb),\n",
         "    verbose = 0)"
       ],
-      "id": "60e09216-5fed-4818-9f34-c87a35bf6b0c"
+      "id": "da87bb0d-325c-4d27-89b8-702d35fd0ca6"
     },
     {
       "cell_type": "code",
@@ -142,7 +142,7 @@
       "source": [
         "plot(my_history)"
       ],
-      "id": "1b91aa5b-1b83-4d41-b96a-319319ac81e4"
+      "id": "c43f5f78-a4b5-4607-9177-caa57be630df"
     },
     {
       "cell_type": "code",
@@ -152,7 +152,7 @@
       "source": [
         "my_history"
       ],
-      "id": "c887198c-01f1-4664-b883-90bc4b944dd7"
+      "id": "4532a621-dddd-4340-a73f-2210c436d26e"
     },
     {
       "cell_type": "code",
@@ -163,10 +163,10 @@
         "y_ <- my_model %>% predict(X)\n",
         "mean((y_ - y)^2)**0.5"
       ],
-      "id": "af21aa79-c7d6-4282-a7fc-5dbb3d3cd14c"
+      "id": "a7488a1d-ac3d-4c5e-9d1e-4008074a0c11"
     },
     {
-      "id": "7a94c43a",
+      "id": "28850e7e",
       "cell_type": "markdown",
       "source": "## 11.2 Keras\u306b\u3088\u308b\u5206\u985e",
       "metadata": {}
@@ -185,7 +185,7 @@
         "library(tidyverse)\n",
         "my_data <- iris[sample(nrow(iris)), ]"
       ],
-      "id": "aedf4527-92fa-44a9-9589-86b1133d71ce"
+      "id": "1772cf4d-3043-46c8-b50c-09063f9df66f"
     },
     {
       "cell_type": "code",
@@ -197,7 +197,7 @@
         "  select(-Species) %>% scale\n",
         "y <- as.integer(my_data$Species) - 1"
       ],
-      "id": "b64adc1c-edcc-4567-afb6-96758d1851a1"
+      "id": "5e326180-63d3-4093-8358-4ce6f0f87b8e"
     },
     {
       "cell_type": "code",
@@ -209,7 +209,7 @@
         "  layer_dense(units = 3, activation = \"relu\", input_shape = c(4)) %>%\n",
         "  layer_dense(units = 3, activation = \"softmax\")"
       ],
-      "id": "a2d4e1a0-51b4-4d2e-a9f1-c86407c17b1c"
+      "id": "71032aeb-ee62-496b-a300-8abc9666e188"
     },
     {
       "cell_type": "code",
@@ -221,7 +221,7 @@
         "                     optimizer = \"rmsprop\",\n",
         "                     metrics = c(\"accuracy\"))"
       ],
-      "id": "6d6fc0d5-85f9-424b-b477-a06f880d9f16"
+      "id": "01548508-8256-4fc3-9fbc-c9fddb794e2b"
     },
     {
       "cell_type": "code",
@@ -244,7 +244,7 @@
         "\n",
         "plot(my_history)"
       ],
-      "id": "2e1a2550-80d4-4d95-a3cb-e9608fe38b9b"
+      "id": "d1ed59f0-3d67-46c9-8d3c-1fcf161cf511"
     },
     {
       "cell_type": "code",
@@ -254,7 +254,7 @@
       "source": [
         "my_history"
       ],
-      "id": "f9fc4bc2-07b4-4801-826e-289f023be586"
+      "id": "5565c5ba-be96-4eef-9859-b98f2f3c1dd2"
     },
     {
       "cell_type": "code",
@@ -266,7 +266,7 @@
         "y_ <- apply(tmp, 1, which.max) - 1\n",
         "mean(y_ == y)"
       ],
-      "id": "798d365c-a075-41c7-b7d5-f24fb289c913"
+      "id": "3b4c2a51-2e34-4c4c-8117-00033c92dcc8"
     },
     {
       "cell_type": "code",
@@ -278,7 +278,7 @@
         "\n",
         "-mean(log(c(0.7, 0.6, 0.2, 0.7)))"
       ],
-      "id": "4093488d-46b2-41bf-aa49-c3e05ccc2bff"
+      "id": "c4990744-0cdb-4a2a-9fd7-fca1f99f6971"
     },
     {
       "cell_type": "code",
@@ -296,7 +296,7 @@
         "             c(0.2, 0.5, 0.3),\n",
         "             c(0.2, 0.7, 0.1))"
       ],
-      "id": "d6dbf669-ebe5-4133-9f9e-53146eda16fc"
+      "id": "7d4f36ab-cc55-4fd2-9993-8197db758e2b"
     },
     {
       "cell_type": "code",
@@ -307,10 +307,10 @@
         "c(mean(as.array(loss_sparse_categorical_crossentropy(y_true = y, y_pred = y_1))),\n",
         "  mean(as.array(loss_sparse_categorical_crossentropy(y_true = y, y_pred = y_2))))"
       ],
-      "id": "f102b13a-3155-4833-b262-4d07b3ab7e51"
+      "id": "531b3c77-7281-4564-b949-14e29f80b6a3"
     },
     {
-      "id": "92399a0b",
+      "id": "83440c01",
       "cell_type": "markdown",
       "source": "## 11.3 MNIST\uff1a\u624b\u66f8\u304d\u6570\u5b57\u306e\u5206\u985e",
       "metadata": {}
@@ -323,15 +323,14 @@
       "source": [
         "if (Sys.getenv(\"COLAB_JUPYTER_IP\") != \"\") {\n",
         "  library(keras3)\n",
-        "  keras3::`%<-%`(c(c(x_train, y_train), c(x_test, y_test)), dataset_mnist())\n",
         "} else {\n",
         "  library(keras)\n",
-        "  keras::`%<-%`(c(c(x_train, y_train), c(x_test, y_test)), dataset_mnist())\n",
         "}\n",
-        "# c(c(x_train, y_train), c(x_test, y_test)) %<-% dataset_mnist()\n",
+        "library(zeallot)\n",
+        "c(c(x_train, y_train), c(x_test, y_test)) %<-% dataset_mnist()\n",
         "library(tidyverse)"
       ],
-      "id": "bfe57e7b-b9dd-4ffd-8fa0-181a62142a4b"
+      "id": "d685105c-4f4c-4fd2-8e8d-047cb4796361"
     },
     {
       "cell_type": "code",
@@ -341,7 +340,7 @@
       "source": [
         "dim(x_train)"
       ],
-      "id": "7ba59a49-fc6f-4c14-9745-a45f4f3b4ba3"
+      "id": "1b9ee597-9dcc-45d2-bfb2-89eb3eaf74ba"
     },
     {
       "cell_type": "code",
@@ -351,7 +350,7 @@
       "source": [
         "x_train[5, , ]"
       ],
-      "id": "9c9e9e7f-9dcf-4e82-8a85-50855ea3b438"
+      "id": "de58dbbf-b383-4955-acf9-172c31f91fb5"
     },
     {
       "cell_type": "code",
@@ -362,7 +361,7 @@
         "plot(as.raster(x = x_train[5, , ],\n",
         "               max = max(x_train)))"
       ],
-      "id": "1724a54b-1c72-485c-a403-a514e80da847"
+      "id": "9ea901bf-5dfd-43ea-b8ac-0252c91eca93"
     },
     {
       "cell_type": "code",
@@ -372,7 +371,7 @@
       "source": [
         "head(y_train)"
       ],
-      "id": "0f5e0b42-0c73-44e4-b699-c99224addbb1"
+      "id": "ccab10d8-5889-4f57-818b-032ff9026742"
     },
     {
       "cell_type": "code",
@@ -382,7 +381,7 @@
       "source": [
         "c(min(x_train), max(x_train))"
       ],
-      "id": "fbe3a2cf-7f3c-417f-b471-f14fa1f63c00"
+      "id": "73ced841-5f56-46a5-90c3-fe26db8d7e99"
     },
     {
       "cell_type": "code",
@@ -393,7 +392,7 @@
         "x_train <- x_train / 255\n",
         "x_test  <- x_test  / 255"
       ],
-      "id": "5135d92f-1d69-4558-a915-a44cabfd6f1c"
+      "id": "f375bd1b-f50c-4107-8d42-cde8bec0324a"
     },
     {
       "cell_type": "code",
@@ -405,7 +404,7 @@
         "x_train <- x_train[my_index, , ]\n",
         "y_train <- y_train[my_index]"
       ],
-      "id": "09844941-fe45-4a73-a2ba-135bf1ff3aef"
+      "id": "87ee58ff-19e3-45bf-b800-e2bc77282176"
     },
     {
       "cell_type": "code",
@@ -427,7 +426,7 @@
         "my_cb <- callback_early_stopping(patience = 5,\n",
         "                                 restore_best_weights = TRUE)"
       ],
-      "id": "f85f6e95-132e-47ae-acd6-dff99fbe0909"
+      "id": "507be3c9-d1e5-46c0-b4e8-6d1f7a6690c7"
     },
     {
       "cell_type": "code",
@@ -446,7 +445,7 @@
         "\n",
         "plot(my_history)"
       ],
-      "id": "6856f4f1-b345-442f-8b8e-7e2891a9826e"
+      "id": "251e97c6-9dd1-4253-8d1d-2390bdbfb638"
     },
     {
       "cell_type": "code",
@@ -458,7 +457,7 @@
         "y_ <- apply(tmp, 1, which.max) - 1\n",
         "table(y_, y_test)"
       ],
-      "id": "2aada84f-8652-411d-802b-f857e4269d2a"
+      "id": "0667d845-b272-4e63-b8b2-73e01f369478"
     },
     {
       "cell_type": "code",
@@ -466,7 +465,7 @@
       "metadata": {},
       "outputs": [],
       "source": [],
-      "id": "a094050f-a6bf-4bc0-8f3e-1d57257bbbb3"
+      "id": "b1ed2d98-859e-4e9c-9f44-fec201dea68e"
     },
     {
       "cell_type": "code",
@@ -476,7 +475,7 @@
       "source": [
         "mean(y_ == y_test)"
       ],
-      "id": "b9d914c5-1b8c-4534-9cff-f4fca7e91abd"
+      "id": "819db9bd-aa28-4514-8d19-dbb3a5149729"
     },
     {
       "cell_type": "code",
@@ -487,7 +486,7 @@
         "my_model %>%\n",
         "  evaluate(x = x_test, y = y_test)"
       ],
-      "id": "2c0814b5-41a6-4cab-b7c5-9b8b753b59c0"
+      "id": "60e982cf-2aac-4212-b0bd-3c441e21fa8a"
     },
     {
       "cell_type": "code",
@@ -498,7 +497,7 @@
         "x_train2d <- x_train %>% array_reshape(c(-1, 28, 28, 1))\n",
         "x_test2d  <- x_test  %>% array_reshape(c(-1, 28, 28, 1))"
       ],
-      "id": "2c97547b-aa25-4321-9f4f-2aa8295ae72a"
+      "id": "e40fdb76-25a8-429d-827d-3bfd8d446379"
     },
     {
       "cell_type": "code",
@@ -525,7 +524,7 @@
         "my_cb <- callback_early_stopping(patience = 5,\n",
         "                                 restore_best_weights = TRUE)"
       ],
-      "id": "efeee514-4085-4be9-81db-f78c292226c8"
+      "id": "d9c869ab-ea07-4347-a027-095b07b8d943"
     },
     {
       "cell_type": "code",
@@ -544,7 +543,7 @@
         "\n",
         "plot(my_history)"
       ],
-      "id": "255b1c9f-3a38-4e51-8d08-40d181f14f6d"
+      "id": "51214782-bd76-4719-a075-713c5c3681e5"
     },
     {
       "cell_type": "code",
@@ -555,7 +554,7 @@
         "my_model %>%\n",
         "  evaluate(x = x_test2d, y = y_test)"
       ],
-      "id": "101392e8-1246-4575-99d1-56c17691f602"
+      "id": "c133d393-2cf5-4094-a53a-3233a37fa7df"
     },
     {
       "cell_type": "code",
@@ -583,7 +582,7 @@
         "my_cb <- callback_early_stopping(patience = 5,\n",
         "                                 restore_best_weights = TRUE)"
       ],
-      "id": "93f2537c-30a0-4ada-b594-0606b22fcb7e"
+      "id": "f69578cd-9aa9-4ae5-9f18-4ddbdcf13fe0"
     },
     {
       "cell_type": "code",
@@ -602,7 +601,7 @@
         "\n",
         "plot(my_history)"
       ],
-      "id": "b621fff7-99a6-44cb-8050-ba01f798931c"
+      "id": "b8d62e8b-7ccd-4d66-984f-9504000ddd03"
     },
     {
       "cell_type": "code",
@@ -613,7 +612,7 @@
         "my_model %>%\n",
         "  evaluate(x = x_test2d, y = y_test)"
       ],
-      "id": "7f9cb3dc-7e62-4157-b2e0-2b727c32974d"
+      "id": "2e1b97d6-9b97-448b-bb25-309df60d1c7e"
     },
     {
       "cell_type": "code",
@@ -631,7 +630,7 @@
         "  filter(y_ != y) %>%                       # \u4e88\u6e2c\u304c\u306f\u305a\u308c\u305f\u3082\u306e\u3092\u6b8b\u3059\n",
         "  arrange(desc(y_prob))                     # \u78ba\u7387\u306e\u5927\u304d\u3044\u9806\u306b\u4e26\u3073\u66ff\u3048\u308b"
       ],
-      "id": "ad905bd6-1e65-41dd-b7f5-741615927c75"
+      "id": "ea6ebea8-e611-4e6f-bf44-106fd93eea96"
     },
     {
       "cell_type": "code",
@@ -641,7 +640,7 @@
       "source": [
         "head(my_result)"
       ],
-      "id": "58100447-9e8c-4948-9301-a1d7089917c0"
+      "id": "257dd23f-2df4-4d62-931f-f619a9db868d"
     },
     {
       "cell_type": "code",
@@ -667,10 +666,10 @@
         "  theme(legend.position = \"none\") +\n",
         "  facet_grid(. ~ label)"
       ],
-      "id": "3c633b72-1ab2-4006-b089-487116aad473"
+      "id": "660a6b6e-460a-401c-b0b1-0e91a4cead16"
     },
     {
-      "id": "db5ee03e",
+      "id": "8aefc561",
       "cell_type": "markdown",
       "source": "## 11.4 AutoML",
       "metadata": {}
@@ -693,7 +692,7 @@
         "h2o.no_progress()\n",
         "# h2o.shutdown(prompt = FALSE) # \u505c\u6b62"
       ],
-      "id": "ece3b716-9bd1-434a-8736-75f3cfd8f67a"
+      "id": "9b3f4304-e423-4ecb-97d9-e803dacf2f80"
     },
     {
       "cell_type": "code",
@@ -708,7 +707,7 @@
         "# \u3042\u308b\u3044\u306f\n",
         "my_frame <- h2o.importFile(my_url, header = TRUE) # \u30c7\u30fc\u30bf\u3092\u8aad\u307f\u8fbc\u3080\uff0e"
       ],
-      "id": "5e3271a4-3d23-4f1b-aee5-58fc88cb6fd8"
+      "id": "a96a50e1-57ea-46ff-ae47-6c75c51023a2"
     },
     {
       "cell_type": "code",
@@ -722,7 +721,7 @@
         "my_frame %>% as.data.frame %>% head\n",
         "# \u7d50\u679c\u306f\u5272\u611b\uff08\u898b\u305f\u76ee\u306f\u540c\u3058\uff09"
       ],
-      "id": "69690590-4a97-4800-b86a-a00c41d4e449"
+      "id": "5c46a53a-ff5b-4aaa-84c6-3862152ce1bf"
     },
     {
       "cell_type": "code",
@@ -735,7 +734,7 @@
         "    training_frame = my_frame,\n",
         "    max_runtime_secs = 60)"
       ],
-      "id": "2d7962e7-007a-4c06-bc42-55c0db7caeb4"
+      "id": "fc4e97d3-a2e1-492d-9995-59f1e3277818"
     },
     {
       "cell_type": "code",
@@ -745,7 +744,7 @@
       "source": [
         "min(my_model@leaderboard$rmse)"
       ],
-      "id": "eb4a2367-9eee-40b0-8e6f-4a184038c04d"
+      "id": "ecf3e987-5f12-4bf1-8495-18062a81d818"
     },
     {
       "cell_type": "code",
@@ -761,7 +760,7 @@
         "\n",
         "plot(y, y_)"
       ],
-      "id": "b276406d-95b0-4c02-ad11-513e1b035570"
+      "id": "563b05fc-395e-486f-879e-003839e08ecc"
     },
     {
       "cell_type": "code",
@@ -769,17 +768,13 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "if (Sys.getenv(\"COLAB_JUPYTER_IP\") != \"\") {\n",
-        "  keras3::`%<-%`(c(c(x_train, y_train), c(x_test, y_test)), dataset_mnist())\n",
-        "} else {\n",
-        "  keras::`%<-%`(c(c(x_train, y_train), c(x_test, y_test)), dataset_mnist())\n",
-        "}\n",
-        "# c(c(x_train, y_train), c(x_test, y_test)) %<-% dataset_mnist()\n",
+        "library(zeallot)\n",
+        "c(c(x_train, y_train), c(x_test, y_test)) %<-% dataset_mnist()\n",
         "my_index <- sample(1:60000, 6000)\n",
         "x_train <- x_train[my_index, , ]\n",
         "y_train <- y_train[my_index]"
       ],
-      "id": "5bd47177-28c6-47f3-a761-f078cec30371"
+      "id": "0571c82f-f489-40ad-aaf2-4e1516a51109"
     },
     {
       "cell_type": "code",
@@ -798,7 +793,7 @@
         "  as.data.frame\n",
         "my_test <- as.h2o(tmp)"
       ],
-      "id": "ef71eaa6-3140-4810-aed1-0faa925dcb93"
+      "id": "6c71fb42-0d54-42f8-af93-972746d05df5"
     },
     {
       "cell_type": "code",
@@ -811,7 +806,7 @@
         "    training_frame = my_train,\n",
         "    max_runtime_secs = 120)"
       ],
-      "id": "4416da6f-4a9c-4a7e-8fac-49bb4a9c3b22"
+      "id": "7752ac08-80fb-432b-bf93-4493a99140ca"
     },
     {
       "cell_type": "code",
@@ -822,7 +817,7 @@
         "min(my_model@leaderboard$\n",
         "    mean_per_class_error)"
       ],
-      "id": "9e07ba1d-7dcc-4e95-a139-92aaf24129a8"
+      "id": "e90b4421-8522-4e76-8aa8-0bfc685c1a0d"
     },
     {
       "cell_type": "code",
@@ -836,7 +831,7 @@
         "\n",
         "mean(y_ == y_test)"
       ],
-      "id": "863d14d1-70b5-4c70-a238-21d2638b4db7"
+      "id": "8ef037cc-684c-4d2a-aaa8-6284f3e56bea"
     }
   ],
   "nbformat": 4,
