不要なlibraryのカット

--- a/code/R-notebook/r-11.ipynb
+++ b/code/R-notebook/r-11.ipynb
@@ -1,7 +1,7 @@
 {
   "cells": [
     {
-      "id": "da445c5b",
+      "id": "2e4c0f79",
       "cell_type": "markdown",
       "source": "[\u8fbb\u771f\u543e\u30fb\u77e2\u5439\u592a\u6717\u300e\u30bc\u30ed\u304b\u3089\u306f\u3058\u3081\u308b\u30c7\u30fc\u30bf\u30b5\u30a4\u30a8\u30f3\u30b9\u5165\u9580\u300f\uff08\u8b1b\u8ac7\u793e,\u00a02021\uff09](https://github.com/taroyabuki/fromzero)",
       "metadata": {}
@@ -20,10 +20,10 @@
         "  install.packages(setdiff(packages_to_install, installed_packages))\n",
         "}"
       ],
-      "id": "3c085e15-756b-4037-99a6-f7033fc4bcb1"
+      "id": "3f399423-d67c-41fe-923d-bc027c265f3a"
     },
     {
-      "id": "f6225eee",
+      "id": "3e243ea3",
       "cell_type": "markdown",
       "source": "## 11.1 Keras\u306b\u3088\u308b\u56de\u5e30",
       "metadata": {}
@@ -44,7 +44,7 @@
         "                \"/fromzero/master/data/wine.csv\")\n",
         "tmp <- read_csv(my_url)"
       ],
-      "id": "157a4b0a-2936-46f4-a1db-abe6b166c9fa"
+      "id": "c09d57b1-6d02-4b16-aeae-97ffd7f5f09b"
     },
     {
       "cell_type": "code",
@@ -54,7 +54,7 @@
       "source": [
         "my_data <- tmp[sample(nrow(tmp)), ]"
       ],
-      "id": "894fb31e-944a-41b4-9a99-fd65d0008e3d"
+      "id": "12417b8c-34f7-4dc1-8908-b2d89e917b07"
     },
     {
       "cell_type": "code",
@@ -66,7 +66,7 @@
         "  select(-LPRICE2) %>% scale\n",
         "y <- my_data$LPRICE2"
       ],
-      "id": "829429fa-c46e-4f26-b682-44207ea1988b"
+      "id": "324c8142-9ca9-445a-832a-c77331cf05a3"
     },
     {
       "cell_type": "code",
@@ -76,7 +76,7 @@
       "source": [
         "curve(activation_relu(x), -3, 3)"
       ],
-      "id": "ff60523f-d831-4cbc-8f9e-3b25280f4e77"
+      "id": "3e596b2c-a39e-4064-9b91-d268f3c823b0"
     },
     {
       "cell_type": "code",
@@ -91,7 +91,7 @@
         "summary(my_model) # \u30cd\u30c3\u30c8\u30ef\u30fc\u30af\u306e\u6982\u8981\n",
         "# \u5272\u611b\uff08Python\u306e\u7d50\u679c\u3092\u53c2\u7167\uff09"
       ],
-      "id": "a2f63dc7-16f5-473e-a278-e2baebc5aefa"
+      "id": "28fff2df-8df8-4cad-a2dd-1bc1c04e55b3"
     },
     {
       "cell_type": "code",
@@ -103,7 +103,7 @@
         "  loss = \"mse\",\n",
         "  optimizer = \"rmsprop\")"
       ],
-      "id": "d3f35d56-4881-49d0-a09a-3478864391d9"
+      "id": "03935f89-4af8-43df-be20-f89852eb4873"
     },
     {
       "cell_type": "code",
@@ -115,7 +115,7 @@
         "  patience = 20,\n",
         "  restore_best_weights = TRUE)"
       ],
-      "id": "73e8a12a-3dea-4e50-81cb-883cbdfe399d"
+      "id": "67b26bd5-5095-434c-9a6a-e71098c302cc"
     },
     {
       "cell_type": "code",
@@ -132,7 +132,7 @@
         "    callbacks = list(my_cb),\n",
         "    verbose = 0)"
       ],
-      "id": "da87bb0d-325c-4d27-89b8-702d35fd0ca6"
+      "id": "46c649d3-4dee-4c77-bb0e-2bd4664f0380"
     },
     {
       "cell_type": "code",
@@ -142,7 +142,7 @@
       "source": [
         "plot(my_history)"
       ],
-      "id": "c43f5f78-a4b5-4607-9177-caa57be630df"
+      "id": "172ac024-a98c-43a5-85ae-4d600248e663"
     },
     {
       "cell_type": "code",
@@ -152,7 +152,7 @@
       "source": [
         "my_history"
       ],
-      "id": "4532a621-dddd-4340-a73f-2210c436d26e"
+      "id": "b254ead5-3e38-47ed-9829-774294010e9e"
     },
     {
       "cell_type": "code",
@@ -163,10 +163,10 @@
         "y_ <- my_model %>% predict(X)\n",
         "mean((y_ - y)^2)**0.5"
       ],
-      "id": "a7488a1d-ac3d-4c5e-9d1e-4008074a0c11"
+      "id": "353c60a3-2620-4e19-b165-7d9926a3b74a"
     },
     {
-      "id": "28850e7e",
+      "id": "2813f897",
       "cell_type": "markdown",
       "source": "## 11.2 Keras\u306b\u3088\u308b\u5206\u985e",
       "metadata": {}
@@ -185,7 +185,7 @@
         "library(tidyverse)\n",
         "my_data <- iris[sample(nrow(iris)), ]"
       ],
-      "id": "1772cf4d-3043-46c8-b50c-09063f9df66f"
+      "id": "1910ec23-b6f0-43af-a856-6b34b2bbe8a4"
     },
     {
       "cell_type": "code",
@@ -197,7 +197,7 @@
         "  select(-Species) %>% scale\n",
         "y <- as.integer(my_data$Species) - 1"
       ],
-      "id": "5e326180-63d3-4093-8358-4ce6f0f87b8e"
+      "id": "a78a0d6e-829d-4882-8532-bca967714f91"
     },
     {
       "cell_type": "code",
@@ -209,7 +209,7 @@
         "  layer_dense(units = 3, activation = \"relu\", input_shape = c(4)) %>%\n",
         "  layer_dense(units = 3, activation = \"softmax\")"
       ],
-      "id": "71032aeb-ee62-496b-a300-8abc9666e188"
+      "id": "e7b23634-7b64-41d1-9ec7-c7a11a5ea9d7"
     },
     {
       "cell_type": "code",
@@ -221,7 +221,7 @@
         "                     optimizer = \"rmsprop\",\n",
         "                     metrics = c(\"accuracy\"))"
       ],
-      "id": "01548508-8256-4fc3-9fbc-c9fddb794e2b"
+      "id": "8c1aea28-dcf2-460c-abb9-990a8059fe06"
     },
     {
       "cell_type": "code",
@@ -244,7 +244,7 @@
         "\n",
         "plot(my_history)"
       ],
-      "id": "d1ed59f0-3d67-46c9-8d3c-1fcf161cf511"
+      "id": "843cad5b-0b39-47db-8a08-321e632ee1c9"
     },
     {
       "cell_type": "code",
@@ -254,7 +254,7 @@
       "source": [
         "my_history"
       ],
-      "id": "5565c5ba-be96-4eef-9859-b98f2f3c1dd2"
+      "id": "8ca9ef80-45f6-4c35-9b6b-56f5f60ec6cf"
     },
     {
       "cell_type": "code",
@@ -266,7 +266,7 @@
         "y_ <- apply(tmp, 1, which.max) - 1\n",
         "mean(y_ == y)"
       ],
-      "id": "3b4c2a51-2e34-4c4c-8117-00033c92dcc8"
+      "id": "9b242586-d0f4-401f-9b4b-e51fd9b19710"
     },
     {
       "cell_type": "code",
@@ -278,7 +278,7 @@
         "\n",
         "-mean(log(c(0.7, 0.6, 0.2, 0.7)))"
       ],
-      "id": "c4990744-0cdb-4a2a-9fd7-fca1f99f6971"
+      "id": "8a4c26ab-6bd5-493c-93e0-68d408ece610"
     },
     {
       "cell_type": "code",
@@ -296,7 +296,7 @@
         "             c(0.2, 0.5, 0.3),\n",
         "             c(0.2, 0.7, 0.1))"
       ],
-      "id": "7d4f36ab-cc55-4fd2-9993-8197db758e2b"
+      "id": "f646b08e-40e6-4b9a-a858-38b36422f9aa"
     },
     {
       "cell_type": "code",
@@ -307,10 +307,10 @@
         "c(mean(as.array(loss_sparse_categorical_crossentropy(y_true = y, y_pred = y_1))),\n",
         "  mean(as.array(loss_sparse_categorical_crossentropy(y_true = y, y_pred = y_2))))"
       ],
-      "id": "531b3c77-7281-4564-b949-14e29f80b6a3"
+      "id": "3768ff36-516a-4070-ad6f-a4a86b113532"
     },
     {
-      "id": "83440c01",
+      "id": "f5d6b896",
       "cell_type": "markdown",
       "source": "## 11.3 MNIST\uff1a\u624b\u66f8\u304d\u6570\u5b57\u306e\u5206\u985e",
       "metadata": {}
@@ -326,11 +326,10 @@
         "} else {\n",
         "  library(keras)\n",
         "}\n",
-        "library(zeallot)\n",
-        "c(c(x_train, y_train), c(x_test, y_test)) %<-% dataset_mnist()\n",
-        "library(tidyverse)"
+        "library(tidyverse)\n",
+        "c(c(x_train, y_train), c(x_test, y_test)) %<-% dataset_mnist()"
       ],
-      "id": "d685105c-4f4c-4fd2-8e8d-047cb4796361"
+      "id": "56fd2f5a-1367-43f1-9497-acc77c222623"
     },
     {
       "cell_type": "code",
@@ -340,7 +339,7 @@
       "source": [
         "dim(x_train)"
       ],
-      "id": "1b9ee597-9dcc-45d2-bfb2-89eb3eaf74ba"
+      "id": "8ff80389-e942-4e1d-a5d8-6525c220177b"
     },
     {
       "cell_type": "code",
@@ -350,7 +349,7 @@
       "source": [
         "x_train[5, , ]"
       ],
-      "id": "de58dbbf-b383-4955-acf9-172c31f91fb5"
+      "id": "70037f69-4be6-4ca8-a4e8-cc37bb796577"
     },
     {
       "cell_type": "code",
@@ -361,7 +360,7 @@
         "plot(as.raster(x = x_train[5, , ],\n",
         "               max = max(x_train)))"
       ],
-      "id": "9ea901bf-5dfd-43ea-b8ac-0252c91eca93"
+      "id": "b4a109b5-10a1-42f6-ae31-e99ca7b52ff4"
     },
     {
       "cell_type": "code",
@@ -371,7 +370,7 @@
       "source": [
         "head(y_train)"
       ],
-      "id": "ccab10d8-5889-4f57-818b-032ff9026742"
+      "id": "7700d893-82b3-43d8-a33a-00a0a8129499"
     },
     {
       "cell_type": "code",
@@ -381,7 +380,7 @@
       "source": [
         "c(min(x_train), max(x_train))"
       ],
-      "id": "73ced841-5f56-46a5-90c3-fe26db8d7e99"
+      "id": "78cb3b64-b219-432f-9387-7cbb7c94442e"
     },
     {
       "cell_type": "code",
@@ -392,7 +391,7 @@
         "x_train <- x_train / 255\n",
         "x_test  <- x_test  / 255"
       ],
-      "id": "f375bd1b-f50c-4107-8d42-cde8bec0324a"
+      "id": "1c4b2514-1ca2-4270-8b34-fe13d10c5171"
     },
     {
       "cell_type": "code",
@@ -404,7 +403,7 @@
         "x_train <- x_train[my_index, , ]\n",
         "y_train <- y_train[my_index]"
       ],
-      "id": "87ee58ff-19e3-45bf-b800-e2bc77282176"
+      "id": "904bf052-a903-428d-b9b7-067942f0bda4"
     },
     {
       "cell_type": "code",
@@ -426,7 +425,7 @@
         "my_cb <- callback_early_stopping(patience = 5,\n",
         "                                 restore_best_weights = TRUE)"
       ],
-      "id": "507be3c9-d1e5-46c0-b4e8-6d1f7a6690c7"
+      "id": "c56b4c2f-2b6f-45df-9e58-7094f5ddacb2"
     },
     {
       "cell_type": "code",
@@ -445,7 +444,7 @@
         "\n",
         "plot(my_history)"
       ],
-      "id": "251e97c6-9dd1-4253-8d1d-2390bdbfb638"
+      "id": "1033a96a-66f3-4d32-86b8-d5be0767196f"
     },
     {
       "cell_type": "code",
@@ -457,7 +456,7 @@
         "y_ <- apply(tmp, 1, which.max) - 1\n",
         "table(y_, y_test)"
       ],
-      "id": "0667d845-b272-4e63-b8b2-73e01f369478"
+      "id": "943bc119-5353-46be-8586-a76ce5631b39"
     },
     {
       "cell_type": "code",
@@ -465,7 +464,7 @@
       "metadata": {},
       "outputs": [],
       "source": [],
-      "id": "b1ed2d98-859e-4e9c-9f44-fec201dea68e"
+      "id": "22c64c12-9244-4116-9142-45b45d9c1e88"
     },
     {
       "cell_type": "code",
@@ -475,7 +474,7 @@
       "source": [
         "mean(y_ == y_test)"
       ],
-      "id": "819db9bd-aa28-4514-8d19-dbb3a5149729"
+      "id": "1b004fba-293a-484b-8aa3-d994d90ade96"
     },
     {
       "cell_type": "code",
@@ -486,7 +485,7 @@
         "my_model %>%\n",
         "  evaluate(x = x_test, y = y_test)"
       ],
-      "id": "60e982cf-2aac-4212-b0bd-3c441e21fa8a"
+      "id": "ee423c18-78b3-45d3-96ff-fac301f0b14f"
     },
     {
       "cell_type": "code",
@@ -497,7 +496,7 @@
         "x_train2d <- x_train %>% array_reshape(c(-1, 28, 28, 1))\n",
         "x_test2d  <- x_test  %>% array_reshape(c(-1, 28, 28, 1))"
       ],
-      "id": "e40fdb76-25a8-429d-827d-3bfd8d446379"
+      "id": "ddea71cb-788a-4541-a129-583ebdf9cba9"
     },
     {
       "cell_type": "code",
@@ -524,7 +523,7 @@
         "my_cb <- callback_early_stopping(patience = 5,\n",
         "                                 restore_best_weights = TRUE)"
       ],
-      "id": "d9c869ab-ea07-4347-a027-095b07b8d943"
+      "id": "90925820-8477-412c-848a-7d305ad44a3e"
     },
     {
       "cell_type": "code",
@@ -543,7 +542,7 @@
         "\n",
         "plot(my_history)"
       ],
-      "id": "51214782-bd76-4719-a075-713c5c3681e5"
+      "id": "1885a22b-fd78-412b-ad7f-3822a031fc4a"
     },
     {
       "cell_type": "code",
@@ -554,7 +553,7 @@
         "my_model %>%\n",
         "  evaluate(x = x_test2d, y = y_test)"
       ],
-      "id": "c133d393-2cf5-4094-a53a-3233a37fa7df"
+      "id": "fac895c1-94a6-4f25-87d9-1724d81a5c59"
     },
     {
       "cell_type": "code",
@@ -582,7 +581,7 @@
         "my_cb <- callback_early_stopping(patience = 5,\n",
         "                                 restore_best_weights = TRUE)"
       ],
-      "id": "f69578cd-9aa9-4ae5-9f18-4ddbdcf13fe0"
+      "id": "1c52dc68-4f32-4c39-9f79-34df68121750"
     },
     {
       "cell_type": "code",
@@ -601,7 +600,7 @@
         "\n",
         "plot(my_history)"
       ],
-      "id": "b8d62e8b-7ccd-4d66-984f-9504000ddd03"
+      "id": "01cff13f-3ec5-4a6e-bd33-f79b0955829f"
     },
     {
       "cell_type": "code",
@@ -612,7 +611,7 @@
         "my_model %>%\n",
         "  evaluate(x = x_test2d, y = y_test)"
       ],
-      "id": "2e1b97d6-9b97-448b-bb25-309df60d1c7e"
+      "id": "a80b3800-35c0-4ec0-ae00-8d6440ef512e"
     },
     {
       "cell_type": "code",
@@ -630,7 +629,7 @@
         "  filter(y_ != y) %>%                       # \u4e88\u6e2c\u304c\u306f\u305a\u308c\u305f\u3082\u306e\u3092\u6b8b\u3059\n",
         "  arrange(desc(y_prob))                     # \u78ba\u7387\u306e\u5927\u304d\u3044\u9806\u306b\u4e26\u3073\u66ff\u3048\u308b"
       ],
-      "id": "ea6ebea8-e611-4e6f-bf44-106fd93eea96"
+      "id": "72ab38c7-a8c0-48a9-afe0-590be1f90594"
     },
     {
       "cell_type": "code",
@@ -640,7 +639,7 @@
       "source": [
         "head(my_result)"
       ],
-      "id": "257dd23f-2df4-4d62-931f-f619a9db868d"
+      "id": "f68c9f2b-9f49-4c1a-8ddd-564d0cbfa9ca"
     },
     {
       "cell_type": "code",
@@ -666,10 +665,10 @@
         "  theme(legend.position = \"none\") +\n",
         "  facet_grid(. ~ label)"
       ],
-      "id": "660a6b6e-460a-401c-b0b1-0e91a4cead16"
+      "id": "e290b2d6-0880-4946-b44c-8f3b277865eb"
     },
     {
-      "id": "8aefc561",
+      "id": "12d9d7bf",
       "cell_type": "markdown",
       "source": "## 11.4 AutoML",
       "metadata": {}
@@ -692,7 +691,7 @@
         "h2o.no_progress()\n",
         "# h2o.shutdown(prompt = FALSE) # \u505c\u6b62"
       ],
-      "id": "9b3f4304-e423-4ecb-97d9-e803dacf2f80"
+      "id": "15ff46a0-2fa5-43ea-aefc-5b34c004a397"
     },
     {
       "cell_type": "code",
@@ -707,7 +706,7 @@
         "# \u3042\u308b\u3044\u306f\n",
         "my_frame <- h2o.importFile(my_url, header = TRUE) # \u30c7\u30fc\u30bf\u3092\u8aad\u307f\u8fbc\u3080\uff0e"
       ],
-      "id": "a96a50e1-57ea-46ff-ae47-6c75c51023a2"
+      "id": "a7e4f23c-e23b-4d03-b4dd-86491a914904"
     },
     {
       "cell_type": "code",
@@ -721,7 +720,7 @@
         "my_frame %>% as.data.frame %>% head\n",
         "# \u7d50\u679c\u306f\u5272\u611b\uff08\u898b\u305f\u76ee\u306f\u540c\u3058\uff09"
       ],
-      "id": "5c46a53a-ff5b-4aaa-84c6-3862152ce1bf"
+      "id": "afe52753-8b19-4ce6-9679-a711918a2167"
     },
     {
       "cell_type": "code",
@@ -734,7 +733,7 @@
         "    training_frame = my_frame,\n",
         "    max_runtime_secs = 60)"
       ],
-      "id": "fc4e97d3-a2e1-492d-9995-59f1e3277818"
+      "id": "1d9a16b2-204a-40cd-b22e-05df8455425d"
     },
     {
       "cell_type": "code",
@@ -744,7 +743,7 @@
       "source": [
         "min(my_model@leaderboard$rmse)"
       ],
-      "id": "ecf3e987-5f12-4bf1-8495-18062a81d818"
+      "id": "6d68e8ec-dd1e-4776-9970-799b4b00234e"
     },
     {
       "cell_type": "code",
@@ -760,7 +759,7 @@
         "\n",
         "plot(y, y_)"
       ],
-      "id": "563b05fc-395e-486f-879e-003839e08ecc"
+      "id": "ba96c7dd-de1c-4946-95ca-63e98922e516"
     },
     {
       "cell_type": "code",
@@ -768,13 +767,12 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "library(zeallot)\n",
         "c(c(x_train, y_train), c(x_test, y_test)) %<-% dataset_mnist()\n",
         "my_index <- sample(1:60000, 6000)\n",
         "x_train <- x_train[my_index, , ]\n",
         "y_train <- y_train[my_index]"
       ],
-      "id": "0571c82f-f489-40ad-aaf2-4e1516a51109"
+      "id": "8c733ab4-8e1f-475d-a003-86ff79b765c6"
     },
     {
       "cell_type": "code",
@@ -793,7 +791,7 @@
         "  as.data.frame\n",
         "my_test <- as.h2o(tmp)"
       ],
-      "id": "6c71fb42-0d54-42f8-af93-972746d05df5"
+      "id": "65042e18-132b-4a91-9e9c-96104ec5281d"
     },
     {
       "cell_type": "code",
@@ -806,7 +804,7 @@
         "    training_frame = my_train,\n",
         "    max_runtime_secs = 120)"
       ],
-      "id": "7752ac08-80fb-432b-bf93-4493a99140ca"
+      "id": "45fbacc6-dd4f-4069-9191-356c5c8471af"
     },
     {
       "cell_type": "code",
@@ -817,7 +815,7 @@
         "min(my_model@leaderboard$\n",
         "    mean_per_class_error)"
       ],
-      "id": "e90b4421-8522-4e76-8aa8-0bfc685c1a0d"
+      "id": "32846b68-2b23-4d77-8dc0-d902c8d73191"
     },
     {
       "cell_type": "code",
@@ -831,7 +829,7 @@
         "\n",
         "mean(y_ == y_test)"
       ],
-      "id": "8ef037cc-684c-4d2a-aaa8-6284f3e56bea"
+      "id": "a01135a7-e333-4715-9463-77030fcd1345"
     }
   ],
   "nbformat": 4,
